--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -3,41 +3,41 @@ es:
     messages:
       not_found: 'no encontrado'
       already_confirmed: 'ya ha sido confirmada'
-      not_locked: 'no está bloqueada'
+      not_locked: 'no est&aacute; bloqueada'
 
   devise:
     failure:
       unauthenticated: 'Necesitas acceder a tu cuenta o registrarte antes de continuar.'
       unconfirmed: 'Necesitas confirmar tu cuenta antes de continuar.'
       locked: 'Tu cuenta esta bloqueada.'
-      invalid: 'Contraseña o Email incorrecto.'
-      invalid_token: 'Token de autenticación incorrecto.'
-      timeout: 'Tu sesión ha expirado, por favor accede de nuevo para continuar.'
+      invalid: 'Contrase&ntilde;a o Email incorrecto.'
+      invalid_token: 'Token de autenticaci&oacute;n incorrecto.'
+      timeout: 'Tu sesi&oacute;n ha expirado, por favor accede de nuevo para continuar.'
       inactive: 'Tu cuenta no ha sido activada.'
     sessions:
       signed_in: 'Has ingresado correctamente.'
       signed_out: 'Has salido correctamente.'
     passwords:
-      send_instructions: 'Recibirás un email con instrucciones para cambiar tu contraseña en poco minutos.'
-      updated: 'Tu contraseña ha sido modificada. Ya has accedido a tu cuenta.'
+      send_instructions: 'Recibir&aacute;s un email con instrucciones para cambiar tu contrase&ntilde;a en poco minutos.'
+      updated: 'Tu contrase&ntilde;a ha sido modificada. Ya has accedido a tu cuenta.'
     confirmations:
-      send_instructions: 'Recibirás un email con instrucciones para confirmar tu cuenta en poco minutos.'
+      send_instructions: 'Recibir&aacute;s un email con instrucciones para confirmar tu cuenta en poco minutos.'
       confirmed: 'Tu cuenta ha sido confirmada. Ya has accedido a tu cuenta.'
     registrations:
-      signed_up: 'Te has registrado correctamente. Si está disponible, te habremos enviado un email de confirmación.'
+      signed_up: 'Te has registrado correctamente. Si est&aacute; disponible, te habremos enviado un email de confirmaci&oacute;n.'
       updated: 'Has actualizado tu cuenta correctamente.'
-      destroyed: '!Adiós! Tu cuenta ha sido cancelada. Esperamos verte pronto.'
+      destroyed: '!Adi&oacute;s! Tu cuenta ha sido cancelada. Esperamos verte pronto.'
     unlocks:
-      send_instructions: 'Recibirás un email con instrucciones para desbloquear tu cuenta en pocos minutos.'
+      send_instructions: 'Recibir&aacute;s un email con instrucciones para desbloquear tu cuenta en pocos minutos.'
       unlocked: 'Tu cuenta ha sido desbloqueada. Ya has accedido a tu cuenta.'
     oauth_callbacks:
       success: 'Has sido autorizado satisfactoriamente de la cuenta %{kind}.'
       failure: 'No has sido autorizado en la cuenta %{kind} porque "%{reason}".'
     mailer:
       confirmation_instructions:
-        subject: 'Instrucciones de confirmación'
+        subject: 'Instrucciones de confirmaci&oacute;n'
       reset_password_instructions:
-        subject: 'Instrucciones para cambiar tu contraseña'
+        subject: 'Instrucciones para cambiar tu contrase&ntilde;a'
       unlock_instructions:
         subject: 'Instrucciones para desbloquear tu cuenta'
 
