--- a/config/locales/admin_ui.es.yml
+++ b/config/locales/admin_ui.es.yml
@@ -1,29 +1,29 @@
 es:
   admin:
     buttons:
-      login: "Iniciar sesi&oacute;n"
+      login: "Iniciar sesión"
       send_password: Enviar
       change_password: Actualizar
-      new_item: "+ a&ntilde;adir"
+      new_item: "+ añadir"
       switch_to_site: Ir
 
     messages:
-      confirm: "¿Est&aacute; seguro?"
+      confirm: "¿Está seguro?"
 
     shared:
       header:
         welcome: Bienvenido, %{name}
         see: Ir al sitio web
-        logout: "Cerrar sesi&oacute;n"
+        logout: "Cerrar sesión"
       menu:
         contents: Contenidos
         assets: Archivos
-        settings: "Configuraci&oacute;n"
-        pages: "P&aacute;ginas"
+        settings: "Configuración"
+        pages: "Páginas"
         snippets: Textos
         account: Mi cuenta
         site: Sitio
-        theme_assets: "Archivo de dise&ntilde;o"
+        theme_assets: "Archivo de diseño"
       footer:
         who_is_behind: "Desarrollado por Xenda utilizando LocomotiveCMS y HashiCMS."
       form_actions:
@@ -34,18 +34,18 @@ es:
 
     errors:
       "500":
-        title: Error en la aplicaci&oacute;n
+        title: Error en la aplicación
         notice: "Lo sentimos, pero hay un error en el sitio"
         link: "&rarr; Regresar"
       "404":
-        title: "P&aacute;gina no encontrada"
-        notice: "La p&aacute;gina a la que accedi&oacute; no existe"
+        title: "Página no encontrada"
+        notice: "La página a la que accedió no existe"
         link: "&rarr; Regresar"
 
     notifications:
       new_content_instance:
         subject: "Nuevo [%{type}]"
-        title: "Hola %{name}, s&oacute;lo quer&iacute;amos contarte que se ha creado algo nuevo el %{date}"
+        title: "Hola %{name}, sólo queríamos contarte que se ha creado algo nuevo el %{date}"
         type: "Modelo: %{type}"
 
     custom_fields:
@@ -54,8 +54,8 @@ es:
       kind:
         string: Linea de Texto
         text: Caja de Texto 
-        category: "Campo de selecci&oacute;n"
-        boolean: "Cajas de selecci&oacute;n"
+        category: "Campo de selección"
+        boolean: "Cajas de selección"
         date: Fecha
         file: Archivo
       text_formatting:
@@ -73,38 +73,38 @@ es:
 
     sessions:
       new:
-        title: "Iniciar sesi&oacute;n"
-        link: "Olvid&eacute; mi contrase&ntilde;a"
-        email: "Correo electr&oacute;nico"
-        password: "Contrase&ntilde;a"
+        title: "Iniciar sesión"
+        link: "Olvidé mi contraseña"
+        email: "Correo electrónico"
+        password: "Contraseña"
 
     passwords:
       new:
-        title: "Recuperaci&oacute;n de contrase&ntilde;a"
-        link: "&rarr; Recuperar contrase&ntilde;a"
-        email: "Tu correo electr&oacute;nico"
+        title: "Recuperación de contraseña"
+        link: "&rarr; Recuperar contraseña"
+        email: "Tu correo electrónico"
       edit:
-        title: "Cambiar contrase&ntilde;a"
-        link: "&rarr; Regresar a p&aacute;gina de inicio de sesi&oacute;n"
-        password: "Tu nueva contrase&ntilde;a"
-        password_confirmation: "Confirma la nueva contrase&ntilde;a"
+        title: "Cambiar contraseña"
+        link: "&rarr; Regresar a página de inicio de sesión"
+        password: "Tu nueva contraseña"
+        password_confirmation: "Confirma la nueva contraseña"
 
     pages:
       index:
-        title: "Listado de p&aacute;ginas"
-        help: "Listadas como &aacute;rbol. Tambi&eacute;n se pueden ordenar como carpetas."
-        no_items: "No se han creado p&aacute;ginas a&uacute;n. Empieza <a href=\"%{url}\">ac&aacute;</a> para crear la primera."
-        new: "nueva p&aacute;gina"
-        lastest_items: "&uacute;ltimas p&aacute;ginas"
+        title: "Listado de páginas"
+        help: "Listadas como árbol. También se pueden ordenar como carpetas."
+        no_items: "No se han creado páginas aún. Empieza <a href=\"%{url}\">acá</a> para crear la primera."
+        new: "nueva página"
+        lastest_items: "últimas páginas"
       new:
-        title: "Nueva p&aacute;gina"
-        help: "Llene la informaci&oacute;n para crear la p&aacute;gina. Por defecto, la p&aacute;gina no ser&aacute; publicada."
+        title: "Nueva página"
+        help: "Llene la información para crear la página. Por defecto, la página no será publicada."
       page:
         updated_at: Actualizaba el 
       edit:
         show: ver
-        help: "Puedes actualizar el t&iacute;tulo de la p&aacute;gina haciendo click en esta."
-        ask_for_title: "Introduzca el nuevo t&iacute;tulo"
+        help: "Puedes actualizar el título de la página haciendo click en esta."
+        ask_for_title: "Introduzca el nuevo título"
       form:
         delete_file: Eliminar archivo
         default_block: Predeterminado
@@ -112,14 +112,14 @@ es:
           none: Ninguno
           simple: Simple
           hour: 1 hora
-          day: "1 d&iacute;a"
+          day: "1 día"
           week: 1 semana
           month: 1 mes
 
     snippets:
       index:
         title: "Listado de textos"
-        help: "Los textos son piezas de HTML que se pueden incluir en distintos lugares en el sitio (como en el pie de p&aacute;gina)."
+        help: "Los textos son piezas de HTML que se pueden incluir en distintos lugares en el sitio (como en el pie de página)."
         no_items: "Por ahora no hay textos creados. Pueden <a href=\"%{url}\">crear</a> uno ahora"
         new: nuevo texto
       new:
@@ -139,14 +139,14 @@ es:
     current_sites:
       edit:
         import: importar
-        new_membership: "a&ntilde;adir cuenta"
-        help: "Puedes actualizar el nombre del sitio haciendo click en &eacute;l"
+        new_membership: "añadir cuenta"
+        help: "Puedes actualizar el nombre del sitio haciendo click en él"
         ask_for_name: "Ingresa el nuevo nombre"
 
     memberships:
       new:
         title: Nueva cuenta
-        help: "Ingrese un correo electr&oacute;nico para a&ntilde;adir la cuenta. Si no existe, se crear&aacute; un usuario con esos datos."
+        help: "Ingrese un correo electrónico para añadir la cuenta. Si no existe, se creará un usuario con esos datos."
 
     accounts:
       new:
@@ -155,26 +155,26 @@ es:
 
     my_accounts:
       edit:
-        help: "El nombre puede ser actualizado haciendo click en &eacute;l."
+        help: "El nombre puede ser actualizado haciendo click en él."
         new_site: nuevo sitio 
-        en: "Ingl&eacute;s"
-        de: "Alem&aacute;n"
-        fr: "Franc&eacute;s"
-        pt-BR: "Portugu&eacute;s Brazile&ntilde;o"
+        en: "Inglés"
+        de: "Alemán"
+        fr: "Francés"
+        pt-BR: "Portugués Brazileño"
         ask_for_name: "Ingresa el nuevo nombre"
 
     theme_assets:
       index:
         title: Listando archivos de tema
-        help: "Los archivos del tema se podr&aacute;n actualizar directamente en esta secci&oacute;n. Si necesita actualizar la galer&iacute;a de im&aacute;genes, puede ir a la secci&oacute;n de Archivos."
+        help: "Los archivos del tema se podrán actualizar directamente en esta sección. Si necesita actualizar la galería de imágenes, puede ir a la sección de Archivos."
         all: todos los archivos
         new: nuevo archivo
         snippets: Textos
         css_and_js: Estilos y javascript
         fonts: Fuentes
-        images: "Im&aacute;genes"
+        images: "Imágenes"
         medias: Medios
-        no_items: "Por ahora no hay archivos. Puede <a href=\"%{url}\">crear</a> uno aqu&iacute;."
+        no_items: "Por ahora no hay archivos. Puede <a href=\"%{url}\">crear</a> uno aquí."
       asset:
         updated_at: Actualizado al
       new:
@@ -182,28 +182,28 @@ es:
         help: "Puede enviar cualquier archivo o copiar y pegar una hoja de estilo o archivo javascript."
       edit:
         title: "Editando %{file}"
-        help: "Este archivo puede ser accesado en esta direcci&oacute;n: <a href='%{url}'>%{url}</a>"
+        help: "Este archivo puede ser accesado en esta dirección: <a href='%{url}'>%{url}</a>"
       form:
-        picker_link: Insertar un archivo en el c&oacute;digo
+        picker_link: Insertar un archivo en el código
         choose_file: Elegir archivo
         choose_plain_text: Elegir texto plano
       images:
-        title: "Listando im&aacute;genes"
-        no_items: "Por ahora no hay im&aacute;genes"
+        title: "Listando imágenes"
+        no_items: "Por ahora no hay imágenes"
 
     asset_collections:
       index:
-        title: Colecci&oacute;n de archivos
-        help: "El nombre de la colecci&oacute;n puede ser actualizado haciendo click en &eacute;l. Puede personalizar archivos en colecciones al a&ntilde;adirles campos de informaci&oacute;n nuevos."
-        new: "nueva colecci&oacute;n"
+        title: Colección de archivos
+        help: "El nombre de la colección puede ser actualizado haciendo click en él. Puede personalizar archivos en colecciones al añadirles campos de información nuevos."
+        new: "nueva colección"
         no_items: "Por ahora no hay colecciones. Puede <a href=\"%{url}\">crear</a> una para empezar."
       new:
-        title: Nueva colecci&oacute;n
-        help: "Por ahora, ingrese el nombre. Otros campos aparecer&aacute;n al enviar el formulario."
+        title: Nueva colección
+        help: "Por ahora, ingrese el nombre. Otros campos aparecerán al enviar el formulario."
       edit:
-        help: "El nombre de la colecci&oacute;n se puede actualizar haciendo click en &eacute;l. Puedes personalizar los archivos en una colecci&oacute;n a&ntilde;adi&eacute;ndo campos personalizados nuevos"
-        add_asset: "a&ntilde;adir archivo"
-        destroy: "eliminar colecci&oacute;n"
+        help: "El nombre de la colección se puede actualizar haciendo click en él. Puedes personalizar los archivos en una colección añadiéndo campos personalizados nuevos"
+        add_asset: "añadir archivo"
+        destroy: "eliminar colección"
         no_items: "Por ahora no hay archivos. Puede <a href=\"%{url}\">crear</a> uno para empezar."
         ask_for_name: "Ingrese el nuevo nombre"
 
@@ -228,8 +228,8 @@ es:
         new_item: nuevo elemento
       form:
         order_by:
-          created_at: 'Por fecha de creaci&oacute;n'
-          updated_at: 'Por fecha de actualizaci&oacute;n'
+          created_at: 'Por fecha de creación'
+          updated_at: 'Por fecha de actualización'
           position_in_list: Manualmente
 
     contents:
@@ -254,49 +254,49 @@ es:
 
     cross_domain_sessions:
       new:
-        title: "Autenticaci&oacute;n entre dominios (Cross-domain)"
-        notice: "Se redireccionar&aacute; al dominio por unos segundos."
+        title: "Autenticación entre dominios (Cross-domain)"
+        notice: "Se redireccionará al dominio por unos segundos."
 
     imports:
       new:
         title: Importar
-        help: "Sea cuidadoso al enviar un tema nuevo al sitio web existente, la informaci&oacute;n existente podr&iacute;a ser modificada e incluso eliminada."
+        help: "Sea cuidadoso al enviar un tema nuevo al sitio web existente, la información existente podría ser modificada e incluso eliminada."
       show:
-        title: Importaci&oacute;n en progreso
-        help: "El sitio se est&aacute; actualizando en base al archivo .zip que se ha enviado. Demorar&aacute; al menos unos segundos."
+        title: Importación en progreso
+        help: "El sitio se está actualizando en base al archivo .zip que se ha enviado. Demorará al menos unos segundos."
         steps:
-          site: Informaci&oacute;n del sitioinformation
+          site: Información del sitioinformation
           content_types: Tipos de contenido personalizados
           assets: Archivos del tema
           asset_collections: Colecciones de archivos
           snippets: Textos
-          pages: "P&aacute;ginas"
+          pages: "Páginas"
         messages:
           success: "El sitio ha sido actualizado exitosamente"
-          failure: "El proceso de importaci&oacute;n tuvo un error."
+          failure: "El proceso de importación tuvo un error."
 
     installation:
       common:
-        title: "Primera instalaci&oacute;n"
+        title: "Primera instalación"
         next: Siguiente 
       step_1:
         title: Paso 1/3
-        explanations: "Este es el primer paso de la instalaci&oacute;n. Lea cuidadosamente antes de continuar."
+        explanations: "Este es el primer paso de la instalación. Lea cuidadosamente antes de continuar."
         database:
           label: "Nombre de la base de datos: <em>%{name}</em>"
-          notes: "Todas las conexiones a mongodb pueden hayarse en el archivo <b>config/mongoid.yml</b> de la aplicaci&oacute;n."
+          notes: "Todas las conexiones a mongodb pueden hayarse en el archivo <b>config/mongoid.yml</b> de la aplicación."
         default_domain:
           label: "Dominio por defecto: <em>%{name}</em>"
           notes: "Cada sitio tiene un subdominio por defecto basado en el dominio por defecto. Puede agregar otros dominios al sitio adicionalmente.<br/>El nombre del dominio por defecto puede ser encontrado en el archivo <b>config/initializers/locomotive.rb</b>."
       step_2:
         title: "Paso 2/3 &mdash; Crear cuenta"
         name: Cuenta
-        email: "Correo electr&oacute;nico"
-        password: "Contrase&ntilde;a"
-        password_confirmation: "Confirmaci&oacute;n de contrase&ntilde;a"
+        email: "Correo electrónico"
+        password: "Contraseña"
+        password_confirmation: "Confirmación de contraseña"
         done: "Has creado una cuenta con los datos:<br/><strong>%{name}</strong>, <em>%{email}</em>"
         next: Crear cuenta
       step_3:
         title: "Paso 3/3 &mdash; Crear el sitio"
-        explanations: "Este es el &uacute;ltimo paso de la instalaci&oacute;n. Puedes enviar un tema en un archivo .zip. "
+        explanations: "Este es el último paso de la instalación. Puedes enviar un tema en un archivo .zip. "
         next: Crear sitio
