--- a/config/locales/default.es.yml
+++ b/config/locales/default.es.yml
@@ -46,7 +46,16 @@ es:
     human:
       format:
         delimiter: ","
-      storage_units: [Bytes, KB, MB, GB, TB]
+      storage_units:
+        format: "%n %u"
+        units:
+          byte:
+            one:   "Byte"
+            other: "Bytes"
+          kb: "KB"
+          mb: "MB"
+          gb: "GB"
+          tb: "TB"
     precision:
       format:
         delimiter: ","
