Restringir ciertas secciones del administrador segun tipo de usuario

--- a/config/locales/default.es.yml
+++ b/config/locales/default.es.yml
@@ -25,7 +25,50 @@ es:
           title: "Página no encontrada"
           body: "Contenido de la página 404" 
         other:
-          body: "El contenido va acá" 
+          body: "El contenido va acá"
+
+  activemodel:
+    attributes:
+      page:
+        title: Título
+        parent: Superior
+        slug: Dirección
+        templatized: Plantilla
+        published: Publicado
+        cache_strategy: Caché
+      content_type:
+        name: Nombre
+        description: Descripción
+        slug: Dirección
+        order_by: Ordenar por
+        highlighted_field_name: Nombre de campo destacado
+        group_by_field_name: Agrupar por nombre de campo
+        api_enabled: API Activada
+      asset_collection:
+        name: Nombre
+        slug: Dirección
+      asset:
+        name: Nombre
+        source: Archivo
+      account:
+        email: Email
+        name: Nombre
+        language: Idioma
+        new_password: "Nueva contraseña"
+        new_password_confirmation: "Confirmar la nueva contraseña"
+      snippet:
+        body: Código
+        slug: Dirección
+        name: Nombre
+      theme_asset:
+        content_type: Tipo de contenido
+      site:
+        name: Nombre del sitio
+        domain_name: Dominio
+        subdomain: Subdominio
+        restricted_access: Restrito ?
+        access_login: Login
+        access_password: "Contraseña"
 
   pagination:
     previous: "&laquo; Anterior"
