Creando drop para mostrar un calendario con los eventos

--- a/config/locales/default.es.yml
+++ b/config/locales/default.es.yml
@@ -115,6 +115,7 @@ es:
       short: "%d de %b"
       default: "%d/%m/%Y"
       long: "%A, %d de %B del %Y"
+      short_month: "%b"
   time:
     formats:
       short: "%d de %b a las %H:%M hrs"
